# FIM

./: CMakeLists.txt  README.md
AppDir/: .DirIcon  AppRun  file-integrity-monitor.desktop
AppDir/usr/lib/: libQt6Sql.so.6  libQt6Svg.so.6  libmng.so.2
AppDir/usr/share/applications/: file-integrity-monitor.desktop
AppDir/usr/share/doc/libqt6svg6/: copyright
AppDir/usr/share/doc/qt6-image-formats-plugins/: copyright
core/: Config.h  FileIntegrityEngine.cpp  FileIntegrityEngine.h  FileMetadata.h  FileScanner.cpp  FileScanner.h  FileStatus.h  IHasher.h  IStorage.h  ScanSummary.h
gui/: FileMonitor.cpp  FileMonitor.h  MainWindow.cpp  MainWindow.h  Notifier.cpp  Notifier.h  QtHasher.cpp  QtHasher.h  ScanWorker.cpp  ScanWorker.h  main.cpp
storage/: DatabaseManager.cpp  DatabaseManager.h  QtStorageAdapter.cpp  QtStorageAdapter.h
